--- a/Download_Gdrive_folders_v2.ipynb
+++ b/Download_Gdrive_folders_v2.ipynb
@@ -52,9 +52,9 @@
     }
    ],
    "source": [
-    "# folders = [\"2114794\", \"2114796\", \"2114923\", \"2114924\", \"2114925\", \"2114926\", \"2115004\", \"2115007\", \"2115327\", \"2135188\"]\n",
+    "# folders = [\"9999999\", \"9999999\", \"9999999", \"999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\"]\n",
     "\n",
-    "folder = \"1-3doHhOI2CFuKsFW4Os3WRQvfmnH8xO8\"\n",
+    "folder = \"x-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\"\n",
     "# Download files\n",
     "folder_list = drive.ListFile({'q' : f\"'{folder}' in parents and trashed=false\"}).GetList()\n",
     "\n",
