--- a/Download_Gdrive_folders_v2.ipynb
+++ b/Download_Gdrive_folders_v2.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "# folders = [\"9999999\", \"9999999\", \"9999999", \"999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\"]\n",
+    "# folders = [\"9999999\", \"9999999\", \"9999999\", \"999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\", \"9999999\"]\n",
     "\n",
     "folder = \"x-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\"\n",
     "# Download files\n",
